Add an endpoint to create followers in bulk
